# gcegrpc

./: README.md
app/: README.md
app/go-grpc-streaming-bazel/: README.md  WORKSPACE  cloudbuild.yaml
app/go-grpc-streaming-bazel/cert/: BUILD  googleCA.crt
app/go-grpc-streaming-bazel/echo/: BUILD.bazel  echo.proto
app/go-grpc-streaming-bazel/greeter_client/: BUILD.bazel  main.go
app/go-grpc-streaming-bazel/greeter_server/: BUILD.bazel  main.go
app/grpc_backend/: Dockerfile  go.mod  go.sum
app/grpc_backend/src/: grpc_client.go  grpc_server.go
app/grpc_only_backend/: CA_crt.pem  Dockerfile  envoy_config.yaml  go.mod  go.sum  server_crt.pem
app/grpc_only_backend/src/: grpc_client.go  grpc_server.go
app/http_frontend/: CA_crt.pem  Dockerfile  go.mod  server_key.pem
app/http_frontend/src/: http_server.go
certs/: CA_key.pem  README.md  openssl.cnf  server_crt.pem  server_key.pem
docker_image/: Dockerfile
docker_image/src/: grpc_client.go  grpc_server.go
gae/: Dockerfile  app.yaml
gce/: README.md  containers.yaml
gke_gateway/: CA_crt.pem  README.md  fe-deployment.yaml  fe-srv.yaml  gateway.yaml  route.yaml  server.crt
gke_ingress_lb/: README.md  fe-configmap.yaml  fe-deployment.yaml  fe-hc-secret.yaml  fe-ilb-ingress.yaml  fe-ingress.yaml  fe-secret.yaml  fe-server-secret.yaml  fe-srv-ingress.yaml  fe-srv-lb.yaml
gke_ingress_lb/gke_ingress_lb_backend_config/: README.md  fe-configmap.yaml  fe-deployment.yaml  fe-hc-secret.yaml  fe-ingress.yaml  fe-srv-ingress.yaml  fe-srv-lb.yaml
gke_ingress_lb/gke_ingress_lb_envoy/: envoy-configmap.yaml  envoy_config.conf  envoy_config.yaml  fe-deployment.yaml  fe-ingress.yaml  fe-secret.yaml  fe-srv-ingress.yaml  fe-srv-lb.yaml
gke_ingress_lb/gke_ingress_lb_mux/: fe-deployment.yaml  fe-ilb-ingress.yaml  fe-srv-ingress.yaml  fe-srv-lb.yaml
gke_svc_lb/: README.md  be-deployment.yaml  be-srv-lb.yaml  be-srv.yaml  fe-deployment.yaml  fe-srv.yaml
gke_td_xds/: README.md  fe-deployment.yaml  fe-srv-td.yaml
gke_td_xds/client/: go.mod  go.sum  xds_bootstrap.json.tmpl
gke_td_xds/no_tls/: fe-deployment.yaml  fe-srv-td.yaml
gke_td_xds/tls/: fe-configmap.yaml  fe-deployment.yaml  fe-secret.yaml  fe-srv-td.yaml
grpc-web/: README.md
grpc-web/app/: CA_crt.pem  envoy.yaml  server_crt.pem  server_key.pem
grpc-web/app/www/: client.js  (+2 more)
grpc_web_with_gke/: README.md
grpc_web_with_gke/backend_envoy/: Dockerfile  envoy.yaml  server_key.pem
grpc_web_with_gke/frontend/: Dockerfile  app.js  client.js  package_web.json
grpc_web_with_gke/gke_config/: basic-ingress.yaml  be-deployment.yaml  be-grpc.yaml  be-srv.yaml  fe-deployment.yaml  fe-secret.yaml  fe-srv.yaml
istio/: README.md  all-istio.yaml  fe-certs.yaml  istio-fe.yaml  istio-ilbgateway-service.yaml  istio-ingress-gateway.yaml  istio-ingress-ilbgateway.yaml  overlay-istio-gateway.yaml
(+20 files in other folders)
